// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`appendTextNode > should correctly append text node 1`] = `undefined`;

exports[`appendTextNode > should correctly append text node 2`] = `
{
  "content": ""Test"",
  "type": "TEXT",
}
`;

exports[`appendTextNode > should correctly append text node 3`] = `
{
  "content": "" Test"",
  "type": "TEXT",
}
`;
